[tool.poetry]
name = "summary_daimon_template"
version = "0.1.0"
description = ""
authors = ["moarshy <marshath@gmail.com>"]
readme = "README.md"
packages = [
    { include = "summary_daimon_template", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.8"
langchain-community = "^0.0.21"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
