[tool.poetry]
name = "summary_daimon_template"
version = "0.1.0"
description = ""
authors = ["moarshy <marshath@gmail.com>"]
readme = "README.md"
packages = [
    { include = "summary_daimon_template", from = "." }
]

[tool.poetry.dependencies]
python = "^3.10"
fake-useragent = "^1.4.0"
readability-lxml = "^0.8.1"
markdownify = "^0.11.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
